Main; Fix heading spacing

--- a/public/index/global.css
+++ b/public/index/global.css
@@ -23,6 +23,7 @@ blockquote {
 }
 body *:is(h1, h2, h3, h4, h5, h6) {
     font-family: var(--font-headings);
+    margin: 1rem 0;
 }
 body *:not(h1, h2, h3, h4, h5, h6) {
     font-family: var(--font-sans-serif);
@@ -41,7 +42,6 @@ header.global-banner {
     a {
         color: var(--color-text-link);
         text-decoration: underline;
-        margin-bottom: 1rem;
     }
 
     a:visited {
